objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionType__c</fullName>
        <description>Text field used to log the latest action taken for this campaign member such as &apos;Call Attempted&apos;, &apos;Call Back Tomorrow&apos; etc. The values are up to the deploying company to choose.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CampaignName__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CampaignOmniScriptURL__c</fullName>
        <formula>&quot;/apex/%nsp%OmniScriptUniversalPage?layout=lightning&amp;id=&quot; &amp; Id &amp; &quot;&amp;campaignId=&quot; &amp;  CampaignId &amp; &quot;#/OmniScriptType/&quot; &amp;  Campaign.vlocity_ins__ProcessType__c &amp; &quot;/OmniScriptSubType/&quot; &amp; Campaign.vlocity_ins__ProcessSubType__c &amp; &quot;/OmniScriptLang/&quot; &amp; Campaign.vlocity_ins__ProcessLanguage__c &amp; &quot;/ContextId/&quot;&amp; Id &amp; &quot;/PrefillDataRaptorBundle/&quot;+ Campaign.vlocity_ins__ProcessPrefillBundle__c +&quot;/false&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign OmniScript URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CampaignStatus__c</fullName>
        <description>Formula: Status of the parent campaign (joined via CampaignId).</description>
        <formula>TEXT(Campaign.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CampaignType__c</fullName>
        <description>Formula: Type of the parent campaign (joined via CampaignId).</description>
        <formula>TEXT(Campaign.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmailTemplate__c</fullName>
        <description>Formula: Email template of the parent campaign (joined via CampaignId).</description>
        <formula>Campaign.vlocity_ins__EmailTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastCallDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <formula>Campaign.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetCallDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Call Date</label>
        <type>DateTime</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>